[metadata]
name = towerdefense
version = 1.0
description = Python package for CMPT 419 tower defense game
long_description = Python package for CMPT 419 tower defense game
license = Your license here
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    click==8.*
    pygame==2.*
    structlog

[options.package_data]
towerdefense.assets.gfx = *.png
towerdefense.assets.audio = *.wav, *.ogg
towerdefense.assets.levels = *.json

[options.entry_points]
# Optional, but if you want to keep it,
# make sure you have a function called
# main() in tower.main!
console_scripts =
    towerdefense = towerdefense.main:main